// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallRotate> <BallRotate> Mount: enzyme.mount 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:before,
[data-css-0] > div:before,
.css-0 > div:after,
[data-css-0] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-0 > div:first-child,
[data-css-0] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-0 > div:before,
[data-css-0] > div:before {
  left: -28px;
  top: 0px;
}

.css-0 > div:after,
[data-css-0] > div:after {
  left: 25px;
  top: 0px;
}

<BallRotate
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</BallRotate>
`;

exports[`<BallRotate> <BallRotate> Render: enzyme.render 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:before,
[data-css-0] > div:before,
.css-0 > div:after,
[data-css-0] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-0 > div:first-child,
[data-css-0] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-0 > div:before,
[data-css-0] > div:before {
  left: -28px;
  top: 0px;
}

.css-0 > div:after,
[data-css-0] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<BallRotate> <BallRotate> Shallow: enzyme.shallow 1`] = `
.css-0,
[data-css-0] {
  position: relative;
}

.css-0 > div,
[data-css-0] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-0 > div:before,
[data-css-0] > div:before,
.css-0 > div:after,
[data-css-0] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-0 > div:first-child,
[data-css-0] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-0 > div:before,
[data-css-0] > div:before {
  left: -28px;
  top: 0px;
}

.css-0 > div:after,
[data-css-0] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
